Add abstract section and Wikipedia article on Linux to bibliography

--- a/relatorio1/relatorio1.tex
+++ b/relatorio1/relatorio1.tex
@@ -30,6 +30,7 @@
 % RESUMO
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \begin{abstract}
+  Este trabalho tem como objetivo propor uma melhoria funcional para o kernel do sistema operacional Linux. Escolhemos propor uma mudança no escalonador de processos do sistema operacional, mais especificamente, uma troca da política de escalonamento utilizada pelo respectivo escalonador.
 \end{abstract}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -61,7 +62,7 @@
 % REFERÊNCIAS
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \begin{thebibliography}{99}
-\bibitem{Ref1} Autor(es). \emph{Título}. Ano.
+\bibitem{LinuxWikipedia} Wikipedia. \emph{Linux}. 2016. \url{https://en.wikipedia.org/wiki/Linux}
 \end{thebibliography}
 
 \end{document}
