--- a/relatorio1/relatorio1.tex
+++ b/relatorio1/relatorio1.tex
@@ -9,7 +9,8 @@
 % ASM packages
 \usepackage{amsmath, amstext}
 
-\setlength{\parskip}{0.5em}
+\setlength{\parskip}{0.9em}
+\renewcommand{\baselinestretch}{1.2}
 
 % CABEÇALHO
 \title{Proposta de uma política de escalonamento de loteria para o kernel Linux}
@@ -43,7 +44,7 @@
 \section{Introdução}
 Linux é o software Open Source mais conhecido e mais utilizado do mundo. Se desenvolveu em um sistema operacional para negócios, educação e de uso pessoal. É um sistema operacional de propósito geral de código aberto. \cite{Welsh1998}
 
-A primeira versão do kernel Linux foi publicada em 5 de outubro de 1991 por Linus Torvalds como um clone do sistema operacional UNIX. Linux foi desenvolvido originalmente como um sistema operacional gratuito para computadores pessoais baseado na arquitetura Intel x86, mas desde então tem sido portado para mais plataformas do que qualquer outro sistema operacional. Devido à dominância do s.o. Android em smartphones, o Linux tem a maior base de instalações de todos os sistemas operacionais de propósito geral.
+A primeira versão do kernel Linux foi publicada em 5 de outubro de 1991 por Linus Torvalds como um clone do sistema operacional UNIX. Linux foi desenvolvido originalmente como um sistema operacional gratuito para computadores pessoais baseado na arquitetura Intel x86, mas desde então tem sido portado para mais plataformas do que qualquer outro sistema operacional. Devido à dominância do s.o. Android em smartphones, o Linux tem a maior base de instalações de todos os sistemas operacionais de propósito geral. \cite{LinuxWikipedia2016}
 
 A utilização de um sistema operacional baseado em Linux (chamadas \emph{distribuições} ou \emph{distros}) provê diversas vantagens para os usuários e também para os desenvolvedores e mantenedores destes sistemas, dentre elas, principalmente, liberdade, estabilidade e segurança.
 
@@ -66,7 +67,7 @@ Outra política existente é a do escalonador Round Robin (RR) comumente utiliza
 A última política utilizada pelo kernel Linux corresponde a uma fila com vários níveis de prioridades dinâmicas com tempo compartilhado para cada processo. Os processos interativos e \emph{batch} (processos estáticos) são escalonados através deste escalonador (\emph{sched\_other}).
 
 \subsection{Starvation}
-O problema, entretanto, com as políticas utilizadas pelo escalonador de processos do kernel Linux é a possibilidade de ocorrência de \emph{starvation}, problema este que pode ser resolvido com a distribuição de prioridades não-nulas, como implementado na política de escalonamento de loteria (\emph{lottery scheduling}).
+O problema, entretanto, com as políticas utilizadas pelo escalonador de processos do kernel Linux é a possibilidade de ocorrência de \emph{starvation} em ambientes multi-processados, problema este que pode ser resolvido com a distribuição de prioridades não-nulas, como implementado na política de escalonamento de loteria\cite{LSWikipedia2015}.
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % SOLUÇÃO
@@ -79,15 +80,17 @@ O problema, entretanto, com as políticas utilizadas pelo escalonador de process
 % Conclusão/resumo geral e resultados esperados
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \section{Conclusão}
+Com a implementação de uma nova política de escalonamento baseada no método \emph{Lottery Scheduling}, espera-se uma melhora significativa no tempo de processamento em ambientes multi-processados Linux (como computadores pessoais), devido à diminuição da quantidade de ocorrências de inanição (\emph{starvation}). Esta diminuição ocasionaria, obviamente, uma redução do tempo de processamento devido à diminuição de tentativas de processamento por processos que sofreram de inanição em algum intervalo de tempo.
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % REFERÊNCIAS
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \begin{thebibliography}{9}
-\bibitem{LinuxWikipedia2016} Wikipedia. \emph{Linux}. 2016. \url{https://pt.wikipedia.org/wiki/Linux}
 \bibitem{Welsh1998} Matt Welsh et al. \emph{Linux Installation and Getting Started}. 1998. \url{http://www.tldp.org/LDP/gs/gs.html}
+\bibitem{LinuxWikipedia2016} Wikipedia. \emph{Linux}. 2016. \url{https://pt.wikipedia.org/wiki/Linux}
 \bibitem{Oliveira2008} Rômulo S. de Oliveira, Alexandre da S. Carissimi, Simão S. Toscani. \emph{Sistemas Operacionais}. 2008.
 \bibitem{Deitel2006} Harvey M. Deitel, Paul J. Deitel, David R. Choffnes. \emph{Operating Systems}. 2006.
+\bibitem{LSWikipedia2015} Wikipedia. \emph{Lottery Scheduling}. 2015. \url{https://en.wikipedia.org/wiki/Lottery_scheduling}
 \end{thebibliography}
 
 \end{document}
