--- a/relatorio1/relatorio1.tex
+++ b/relatorio1/relatorio1.tex
@@ -44,7 +44,7 @@
 \section{Introdução}
 Linux é o software Open Source mais conhecido e mais utilizado do mundo. Se desenvolveu em um sistema operacional para negócios, educação e de uso pessoal. É um sistema operacional de propósito geral de código aberto. \cite{Welsh1998}
 
-A primeira versão do kernel Linux foi publicada em 5 de outubro de 1991 por Linus Torvalds como um clone do sistema operacional UNIX. Linux foi desenvolvido originalmente como um sistema operacional gratuito para computadores pessoais baseado na arquitetura Intel x86, mas desde então tem sido portado para mais plataformas do que qualquer outro sistema operacional. Devido à dominância do s.o. Android em smartphones, o Linux tem a maior base de instalações de todos os sistemas operacionais de propósito geral. \cite{LinuxWikipedia2016}
+A primeira versão do kernel Linux foi publicada em 5 de outubro de 1991 por Linus Torvalds como um clone do sistema operacional UNIX. Linux foi desenvolvido originalmente como um sistema operacional gratuito para computadores pessoais baseado na arquitetura Intel x86, mas desde então tem sido portado para mais plataformas do que qualquer outro sistema operacional. \cite{LinuxWikipedia2016}
 
 A utilização de um sistema operacional baseado em Linux (chamadas \emph{distribuições} ou \emph{distros}) provê diversas vantagens para os usuários e também para os desenvolvedores e mantenedores destes sistemas, dentre elas, principalmente, liberdade, estabilidade e segurança.
 
@@ -74,6 +74,24 @@ O problema, entretanto, com as políticas utilizadas pelo escalonador de process
 % Solução abordada
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \section{Solução}
+Para solucionar o problema da inanição nas políticas de escalonamento, escolhemos implementar a política escalonamento de loteria. Esta política funciona da seguinte maneira:
+
+\begin{enumerate}
+  \item Bilhetes são distribuídos aleatoriamente (ou segundo alguma distribuição probabilística) a processos;
+  \item Um sorteio de bilhetes é feito aleatoriamente;
+  \item Ao processo cujo bilhete foi escolhido, é, em seguida, dado uma fatia de tempo de excução;
+  \item O quantum pode variar devido ao número de sorteios por segundo.
+\end{enumerate}
+
+Uma vantagem da política de escalonamento de loteria é que, distribuindo-se mais bilhetes para um determinado processo, aumenta-se as chances de este ser selecionado, sendo trivial implementar seleção por prioridades (não determinística). Uma outra vantagem dessa política é que ela elimina o problema da inanição, já que todos os processos têm a chance de ser executados, mesmo podendo esta ser mínima.
+
+Para implementar essa política de escalonamento, devemos seguir os seguintes passos:
+
+\begin{enumerate}
+  \item Alterar as funções e estruturas já existentes e realizar as adições necessárias, assim o escalonador irá suportar essa política;
+  \item Implementar o controle dos bilhetes, sendo que esse controle pode ser um array contendo as informações necessárias para se construir um bilhete;
+  \item Implementação do escalonador em si, podendo este ser feito como uma lista de processos e suas funções de manipulação.
+\end{enumerate}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % CONCLUSÃO
