--- a/relatorio1/relatorio1.tex
+++ b/relatorio1/relatorio1.tex
@@ -19,10 +19,10 @@
     \small{xavier@dcc.ufmg.br}
     \and
     Rodrigo Gontijo\\
-    \small{@dcc.ufmg.br}
+    \small{rodrigo.gontijo@dcc.ufmg.br}
     \and
     Caio Godoy\\
-    \small{@dcc.ufmg.br}
+    \small{caio.godoy@dcc.ufmg.br}
 }
 
 \begin{document}
@@ -33,7 +33,7 @@
 % RESUMO
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \begin{abstract}
-  Este trabalho tem como objetivo propor uma melhoria funcional para o kernel do sistema operacional Linux. Escolhemos propor uma mudança no escalonador de processos do sistema operacional, mais especificamente, uma troca da política de escalonamento utilizada pelo respectivo escalonador.
+  Este trabalho tem como objetivo propor uma melhoria funcional para o kernel do sistema operacional Linux. Propomos uma mudança no escalonador de processos do sistema operacional. Mais especificamente, uma troca da política de escalonamento padrão utilizada.
 \end{abstract}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -44,7 +44,7 @@
 \section{Introdução}
 Linux é o software Open Source mais conhecido e mais utilizado do mundo. Se desenvolveu em um sistema operacional para negócios, educação e de uso pessoal. É um sistema operacional de propósito geral de código aberto. \cite{Welsh1998}
 
-A primeira versão do kernel Linux foi publicada em 5 de outubro de 1991 por Linus Torvalds como um clone do sistema operacional UNIX. Linux foi desenvolvido originalmente como um sistema operacional gratuito para computadores pessoais baseado na arquitetura Intel x86, mas desde então tem sido portado para mais plataformas do que qualquer outro sistema operacional. \cite{LinuxWikipedia2016}
+A primeira versão do kernel Linux foi publicada em 5 de outubro de 1991 por Linus Torvalds. Linux foi desenvolvido originalmente como um sistema operacional gratuito para computadores pessoais baseado na arquitetura Intel x86, mas desde então tem sido portado para mais plataformas do que qualquer outro sistema operacional. \cite{LinuxWikipedia2016}
 
 A utilização de um sistema operacional baseado em Linux (chamadas \emph{distribuições} ou \emph{distros}) provê diversas vantagens para os usuários e também para os desenvolvedores e mantenedores destes sistemas, dentre elas, principalmente, liberdade, estabilidade e segurança.
 
